--- a/blog-post.html
+++ b/blog-post.html
@@ -4,19 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Main Article 1</title>
+
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mali:wght@500&family=Open+Sans&family=Raleway:wght@500&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/blog-post.css">
+    <link rel="stylesheet" href="css/navigation.css">
+    <link rel="stylesheet" href="css/subscription-form.css">
+    <link rel="stylesheet" href="css/footer.css">
   </head>
 
 <body>
   <header>
     <div id="logo">
       <img id="logo-img" src="images/hacker.png" alt="logo">
-      <strong id="page-name">Marina's Blog</strong>
+      <a id="page-name" href="blog.html"><strong>Marina's Blog</strong></a>
     </div>
 
     <nav class="navbar-menu">
@@ -77,7 +84,7 @@
       <div class="text">
         <h3 class="sub-title">Sub-Title</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur impedit culpa voluptates ullam totam, aliquid cupiditate nulla fuga quos repellendus maiores ab iure quasi libero, veniam, blanditiis eveniet distinctio delectus.
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. <u>Pariatur impedit culpa voluptates</u> ullam totam, aliquid cupiditate nulla fuga quos repellendus maiores ab iure quasi libero, veniam, blanditiis eveniet distinctio delectus.
         </p>
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur impedit culpa voluptates ullam totam, aliquid cupiditate nulla fuga quos repellendus maiores ab iure quasi libero, veniam, blanditiis eveniet distinctio delectus.
