--- a/blog.html
+++ b/blog.html
@@ -5,19 +5,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Personal Blog</title>
+
   <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mali:wght@500&family=Open+Sans&family=Raleway:wght@500&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/navigation.css">
+  <link rel="stylesheet" href="css/subscription-form.css">
+  <link rel="stylesheet" href="css/footer.css">
 </head>
 
 <body>
     <header>
       <div id="logo">
         <img id="logo-img" src="images/hacker.png" alt="logo">
-        <strong id="page-name">Marina's Blog</strong>
+        <a id="page-name" href="blog.html"><strong>Marina's Blog</strong></a>
       </div>
 
       <nav class="navbar-menu">
